# portscan

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: cli.rs  main.rs
src/config/: mod.rs
src/scanner/: mod.rs  syn.rs
src/upshot/: mod.rs
tests/: basic.rs  basic_scan.rs
