[package]
name = "portscan"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
colored = "2"
csv = "1.1"
phf = { version = "0.13.1", features = ["macros"] }
pinger = "2.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
